# context-engineering

./: .editorconfig  .env.example  .gitignore  .prettierignore  AGENTS.md  AUDIT-FUTURE-WORK.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROGRESS.md  README.md  SECURITY.md  claude  components.json  demo-memory.ts  demo-pack.ts  demo_adaptive_budget.py  demo_causal_proof.py  demo_dry_run.py  demo_eval.py  demo_flashcards.py  demo_framework.py  demo_graph_compaction.py  demo_handoff.py  demo_hierarchy.py  demo_hybrid_rag.py  demo_hybrid_segmentation.py  demo_multi_objective.py  demo_negation.py  demo_perplexity_segmentation.py  demo_predictive_packer.py  demo_redundancy.py  demo_relational_memory.py  demo_segmentation.py  demo_semantic_segmentation.py  demo_shadow_packer.py  eslint.config.js  ideas.md  (+5 more)
.claude/: ralph-loop.local.md
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
client/: index.html
client/src/: App.tsx  index.css
docs/: AGENTS.md  RELEASING.md  causal-compaction.md  ideas.md
docs/archive/: 2026-02-23-production-hardening-design.md
docs/audit/: ce-cli-audit.md  ce-cli-fixes.md  ce-cli-verified.md  (+14 more)
examples/: demo-memory.ts  demo-pack.ts  full-pipeline.ts
fixtures/: context-items.json  context-pack.json
python/: README.md  pyproject.toml  pyrightconfig.json
python/context_engineering/: __init__.py  _similarity.py  adaptive.py  adversarial.py  allocation.py  api.py  beads.py  bm25.py  bridge.py  cache.py  cache_topology.py  cli.py  compaction.py  compiler.py  core.py  cost.py  council.py  debugger.py  drift.py  entangle.py  errors.py  eval.py  framework.py  framework_middleware.py  immune.py  logging.py  memory.py  pipeline.py  placement.py  postgres_store.py  providers.py  quality.py  rag.py  recommendations.py  redis_store.py  redundancy.py  relevance.py  replay.py  router.py  sdk_interceptors.py  (+6 more)
python/context_engineering.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
python/context_engineering/schemas/: beads-issue.schema.json  cache-aware-pack.schema.json  context-plan.schema.json  cost-estimate.schema.json  memory-item.schema.json  webhook-analytics.schema.json
python/context_framework/: __init__.py  aml_runtime.py  anthropic_agentic_text_system.py  claims_runtime.py  clinical_operations_runtime.py  contact_center_autopilot_runtime.py  contract_negotiation_runtime.py  emergency_operations_runtime.py  framework_bridges.py  grid_outage_runtime.py  hybrid_retrieval.py  legacy_modern_migration_runtime.py  live_integration_harness.py  manager.py  manufacturing_runtime.py  models.py  pharmacovigilance_runtime.py  provider_sdk.py  providers.py  quality.py  regulatory_change_runtime.py  retrieval.py  runtime_base.py  scoring.py  soc_runtime.py  summarization.py  supply_chain_runtime.py  tokenizer.py  tri_provider_pipeline.py  tri_provider_use_cases.py
python/examples/: aml_kyc_fincrime_runtime.py  anthropic_agentic_text_system.py  catastrophe_claims_runtime.py  cerebras_perplexity_router.py  cerebras_reasoning_controls_lab.py  cerebras_speculative_decoding_lab.py  clinical_operations_optimizer_runtime.py  contact_center_autopilot_runtime.py  contract_risk_negotiation_runtime.py  demo_adaptive_budget.py  demo_causal_proof.py  demo_dry_run.py  demo_eval.py  demo_flashcards.py  demo_framework.py  demo_graph_compaction.py  demo_handoff.py  demo_hierarchy.py  demo_hybrid_rag.py  demo_hybrid_segmentation.py  demo_multi_objective.py  demo_negation.py  demo_perplexity_segmentation.py  demo_predictive_packer.py  demo_redundancy.py  demo_relational_memory.py  demo_segmentation.py  demo_semantic_segmentation.py  demo_shadow_packer.py  emergency_operations_center_runtime.py  framework_bridge_lab.py  grid_outage_response_runtime.py  legacy_modern_migration_runtime.py  live_integration_harness.py  manufacturing_root_cause_runtime.py  ollama_local_cloud_bridge_demo.py  pharmacovigilance_events_runtime.py  regulatory_change_impact_runtime.py  soc_incident_commander_runtime.py  supply_chain_control_tower_runtime.py  (+1 more)
python/examples/use_cases/: 01_soc_incident_commander.py  02_catastrophe_claims_pipeline.py  03_supply_chain_control_tower.py  04_aml_kyc_fincrime.py  05_pharmacovigilance_events.py  06_grid_outage_response.py  07_emergency_operations_center.py  08_manufacturing_root_cause.py  09_regulatory_change_impact.py  10_contract_risk_negotiation.py  11_legacy_modern_migration.py  12_contact_center_autopilot.py  13_clinical_operations_optimizer.py  14_text_governance_orchestrator.py  _common.py  run_all_use_cases.py
python/tests/: stress_test_segmentation.py  test_adaptive.py  test_adversarial.py  test_allocation.py  test_aml_runtime.py  test_anthropic_agentic_text_system.py  test_api.py  test_beads.py  test_bm25.py  test_bridge.py  test_cache.py  test_cache_topology.py  test_causal_compaction.py  test_claims_runtime.py  test_cli.py  test_clinical_operations_runtime.py  test_compaction.py  test_compiler.py  test_contact_center_autopilot_runtime.py  test_contract_negotiation_runtime.py  test_core.py  test_cost.py  test_council.py  test_debugger.py  test_distributed_stores.py  test_drift.py  test_emergency_operations_runtime.py  test_entangle.py  test_framework_bridges.py  test_framework_middleware.py  test_grid_outage_runtime.py  test_hardening.py  test_hybrid_retrieval.py  test_immune.py  test_integration.py  test_ir_metrics.py  test_legacy_modern_migration_runtime.py  test_live_integration_harness.py  test_manager.py  test_manufacturing_runtime.py  (+30 more)
roadmap/: 01_context_inspector.md  02_ecosystem_connectors.md  03_universal_proxy.md  04_semantic_redundancy.md  05_learning_to_rank.md  06_distributed_memory.md  07_pii_redaction.md
schemas/: beads-issue.schema.json  cache-aware-pack.schema.json  context-item.schema.json  context-pack.schema.json  context-plan.schema.json  context-trace.schema.json  memory-item.schema.json  pipeline-result.schema.json  webhook-analytics.schema.json
(+83 files in other folders)
