[project]
name = "context-engineering"
version = "0.1.0"
description = "Context engineering toolkit — pack, place, cache-topology, allocation, sessions, pipelines, cost estimation, BEADS handoff, and quality analysis for LLM context"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["context-engineering", "llm", "token-budget", "ai", "context-packing", "prefix-cache", "agent-handoff", "beads", "cost-estimation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
authors = [
  { name = "Dr Gareth Roberts", email = "gareth@zmail.com" },
]

[project.urls]
Homepage = "https://github.com/dr-gareth-roberts/context-engineering"
Repository = "https://github.com/dr-gareth-roberts/context-engineering.git"
Documentation = "https://github.com/dr-gareth-roberts/context-engineering/tree/main/python"
Issues = "https://github.com/dr-gareth-roberts/context-engineering/issues"
Changelog = "https://github.com/dr-gareth-roberts/context-engineering/blob/main/CHANGELOG.md"

dependencies = [
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
  "tiktoken>=0.7.0",
  "jsonschema>=4.21.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21.0",
  "ruff>=0.1.0",
]

[project.scripts]
ce = "context_engineering.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["context_engineering*", "context_framework*"]

[tool.setuptools.package-data]
context_engineering = ["schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
