[project]
name = "context-engineering"
version = "0.1.0"
description = "Context engineering toolkit — pack, place, cache-topology, allocation, sessions, pipelines, cost estimation, BEADS handoff, and quality analysis for LLM context"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["context-engineering", "llm", "token-budget", "ai", "context-packing", "prefix-cache", "agent-handoff", "beads", "cost-estimation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
authors = [
  { name = "Dr Gareth Roberts", email = "gareth@zmail.com" },
]

dependencies = [
  "pydantic>=2.7.0",
]

[project.urls]
Homepage = "https://github.com/dr-gareth-roberts/context-engineering"
Repository = "https://github.com/dr-gareth-roberts/context-engineering.git"
Documentation = "https://github.com/dr-gareth-roberts/context-engineering/tree/main/python"
Issues = "https://github.com/dr-gareth-roberts/context-engineering/issues"
Changelog = "https://github.com/dr-gareth-roberts/context-engineering/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Provider adapters and token counting
providers = ["httpx>=0.27.0", "tiktoken>=0.7.0"]
# REST API server
server = ["fastapi>=0.110.0", "uvicorn>=0.29.0", "httpx>=0.27.0"]
# Structured logging
logging = ["structlog>=24.1.0"]
# CLI with schema validation
cli = ["jsonschema>=4.21.0", "tiktoken>=0.7.0"]
# Webhook telemetry
webhooks = ["httpx>=0.27.0"]
# Storage backends
redis = ["redis>=5.0.0"]
postgres = ["asyncpg>=0.29.0"]
# Domain runtimes (context_framework)
runtimes = ["httpx>=0.27.0", "structlog>=24.1.0"]
# Everything
all = [
  "httpx>=0.27.0",
  "tiktoken>=0.7.0",
  "jsonschema>=4.21.0",
  "structlog>=24.1.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
]
dev = [
  "httpx>=0.27.0",
  "tiktoken>=0.7.0",
  "jsonschema>=4.21.0",
  "structlog>=24.1.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "pytest>=7.0",
  "pytest-asyncio>=0.21.0",
  "ruff>=0.1.0",
  "pyright>=1.1.350",
]

[project.scripts]
ce = "context_engineering.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["context_engineering*"]

# context_framework is available via: pip install context-engineering[runtimes]
# and must be explicitly included if needed:
# [tool.setuptools.packages.find]
# include = ["context_engineering*", "context_framework*"]

[tool.setuptools.package-data]
context_engineering = ["schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = [
  "E501",  # line too long — enforced by formatter, not linter
  "E701",  # multiple statements on one line (colon)
  "E702",  # multiple statements on one line (semicolon)
  "E731",  # lambda assignment
]

[tool.ruff.lint.per-file-ignores]
"examples/**" = ["E402"]  # sys.path manipulation before imports is intentional
"context_framework/__init__.py" = ["F401", "I001"]
